--- a/multiple-datasources-jpa/src/main/resources/application.properties
+++ b/multiple-datasources-jpa/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.port=8090
 
 #spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto =none
+spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.format_sql=true
 
 ##SQL SERVER DB
 spring.datasource.sqlserver.jdbc-url=jdbc:sqlserver://localhost:1433;databaseName=mydb
+#spring.datasource.sqlserver.url=jdbc:sqlserver://localhost:1433;databaseName=mydb
 spring.datasource.sqlserver.username=sa
 spring.datasource.sqlserver.password=admin123
 spring.datasource.sqlserver.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -18,6 +19,7 @@ spring.datasource.sqlserver.hikari.max-lifetime=1800000
 
 ##MYSQL DB
 spring.datasource.mysql.jdbc-url=jdbc:mysql://localhost:3306/mydb
+#spring.datasource.mysql.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.mysql.username=root
 spring.datasource.mysql.password=
 spring.datasource.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -30,6 +32,7 @@ spring.datasource.mysql.hikari.max-lifetime=1800000
 
 ##POSTGRESQL DB
 spring.datasource.postgresql.jdbc-url=jdbc:postgresql://localhost:5432/mydb
+#spring.datasource.postgresql.url=jdbc:postgresql://localhost:5432/mydb
 spring.datasource.postgresql.username=postgres
 spring.datasource.postgresql.password=admin
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
