--- a/jms-activemq/src/main/resources/application.properties
+++ b/jms-activemq/src/main/resources/application.properties
@@ -3,6 +3,9 @@
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
+spring.activemq.packages.trust-all=true
+spring.jms.listener.concurrency=1
+spring.jms.listener.max-concurrency=5
 
 sched.fixed-rate=1500
 sched.initial-delay=500
