add connection timeout property

--- a/server-multiport/src/main/resources/application.properties
+++ b/server-multiport/src/main/resources/application.properties
@@ -3,3 +3,6 @@ management.port=8081
 server.second-port=8082
 server.first-port-path=/first
 server.second-port-path=/second
+server.tomcat.connection-timeout=30000
+#server.tomcat.connection-timeout=30s
+server.second-port.connection-timeout=10000
