add tomcat relaxed-path-chars and relaxed-query-chars properties

--- a/tomcat-webserver-test/src/main/resources/application.properties
+++ b/tomcat-webserver-test/src/main/resources/application.properties
@@ -15,6 +15,12 @@ server.tomcat.max-swallow-size=2MB
 #Maximum size of the form content in any HTTP post request
 server.tomcat.max-http-form-post-size=2MB
 
+#Comma-separated list of additional unencoded characters that should be allowed in URI paths. Only "< > [ \ ] ^ ` { | }" are allowed.
+server.tomcat.relaxed-path-chars=<,>,[,\\,],^,`,{,|,}
+
+#Comma-separated list of additional unencoded characters that should be allowed in URI query strings. Only "< > [ \ ] ^ ` { | }" are allowed.
+server.tomcat.relaxed-query-chars=<,>,[,\\,],^,`,{,|,}
+
 #server.tomcat.accesslog.enabled=true
 #server.tomcat.accesslog.directory=logs
 #server.tomcat.accesslog.file-date-format=yyyy-MM-dd
